<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BibliotecApp</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidaste_tu_contrasena">¿Olvidaste tu contraseña?</string>
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="registrar">Registrar</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="eventos">Eventos</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="bibliotecas">Bibliotecas</string>
    <string name="ingrese_correo">Ingrese un correo</string>
    <string name="ingrese_contrasena">Ingrese una contraseña</string>
    <string name="google">Google</string>
    <string name="repita_contrasena">Repita contraseña</string>
    <string name="prefieres_ingresar_con_tu_cuenta_de_google">¿Prefieres ingresar con tu cuenta de Google?</string>
    <string name="titulo">Titulo</string>
    <string name="direccion">Direccion:</string>
    <string name="calle_x_no_y_h">Calle x No y - h</string>
    <string name="fecha">Fecha:</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="hora">Hora:</string>
    <string name="ir_al_mapa">Ir al mapa</string>
    <string name="titulo_autor" tools:ignore="Typos">Título, autor</string>
    <string name="buscar">Buscar</string>
    <string name="informacion_personal">Información personal</string>
    <string name="mis_prestamos">Mis préstamos</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="mis_eventos">Mis eventos</string>
    <string name="autor" tools:ignore="Typos">Autor:</string>
    <string name="asistire">Asistire</string>
    <string name="reservar">Reservar</string>
    <string name="descripcion">Descripción:</string>
    <string name="categoria">Categoría:</string>
    <string name="anadir_resena">Añadir reseña</string>
    <string name="escribe_una_resena">Escribe una reseña…</string>
    <string name="comentario">Comentario</string>
    <string name="signatura">Signatura:</string>
    <string name="ejemploSignatura">E/14</string>
    <string name="estado">Estado:</string>
    <string name="ejemploEstado">Disponible</string>
    <string name="ejemploPuntos">4.5</string>
    <string name="vence">Vence:</string>
    <string name="esta_seguro_que_quiere_eliminar_esta_reserva">¿Esta seguro que quiere eliminar esta reserva?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="ejemploFecha">11/12/2020</string>
    <string name="title_activity_administrador">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reservado_por">Reservado por:</string>
    <string name="reservas">Reservas</string>
    <string name="prestamos">Prestamos</string>
    <string name="actualizar">Actualizar</string>

    <string-array name="tipoUsuario">
        <item>Usuario</item>
        <item>Administrador</item>
    </string-array>
</resources>