<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_micuenta"
            android:icon="@drawable/ic_person"
            android:title="@string/mi_cuenta" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_event"
            android:title="@string/eventos" />
        <item
            android:id="@+id/nav_bibliotecas"
            android:icon="@drawable/ic_library_books"
            android:title="@string/bibliotecas" />
    </group>
</menu>